--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup -c --bundleConfigAsCjs"
+    "build": "rollup -c --bundleConfigAsCjs",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "author": "",
   "license": "ISC",
@@ -15,13 +17,24 @@
     "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-typescript": "^11.1.1",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "@storybook/addon-essentials": "^7.0.22",
+    "@storybook/addon-interactions": "^7.0.22",
+    "@storybook/addon-links": "^7.0.22",
+    "@storybook/blocks": "^7.0.22",
+    "@storybook/react": "^7.0.22",
+    "@storybook/react-vite": "^7.0.22",
+    "@storybook/testing-library": "^0.0.14-next.2",
+    "@types/react": "^18.2.12",
+    "@types/styled-components": "^4.3.2",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup": "^3.24.0",
     "rollup-plugin-dts": "^5.3.0",
-    "@types/styled-components": "^4.3.2",
-    "tslib": "^2.5.3",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "storybook": "^7.0.22",
     "styled-components": "^5.3.10",
-    "@types/react": "^18.2.12",
+    "tslib": "^2.5.3",
     "typescript": "^5.1.3"
   },
   "peerDependencies": {
