--- a/.github/workflows/mypre-commit.yml
+++ b/.github/workflows/mypre-commit.yml
@@ -22,11 +22,11 @@ jobs:
     steps:
     - name: Checkout code
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+    #- name: Use Node.js ${{ matrix.node-version }}
+     # uses: actions/setup-node@v3
+     # with:
+     #   node-version: ${{ matrix.node-version }}
+      #  cache: 'npm'
 
     # - name: "installing packages"
     #   run: npm install
