--- a/.github/workflows/mypre-commit.yml
+++ b/.github/workflows/mypre-commit.yml
@@ -1,37 +1,27 @@
-# This workflow will do a clean installation of node dependencies, run husky pre-commit hooks that will run prettier, ESlint and custom Jest tests for my component Library
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
-name: Pre-commit CI
+name: Test
 
 on:
+
   push:
-    branches: [ "master" ]
-  #pull_request:
-    #branches: [ "master" ]
+
+    branches:
+
+      - master
 
 jobs:
-  checks:
-    name: Run ESlint Prettier and Jest tests
+
+  test:
+
     runs-on: ubuntu-latest
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - name: Checkout code
-    - uses: actions/checkout@v3
-    #- name: Use Node.js ${{ matrix.node-version }}
-     # uses: actions/setup-node@v3
-     # with:
-     #   node-version: ${{ matrix.node-version }}
-      #  cache: 'npm'
 
-    # - name: "installing packages"
-    #   run: npm install
+    - uses: actions/checkout@v2
 
-    # - name: "run ESlist"
-    #   run: npm run lint:fix
+    - name: Install dependencies
 
-    # - name: "run prettier"
-    #   run: npm run format
+      run: npm install
 
-    # - name: "Jest Tests"
-    #   run: npm run test
+    - name: Run tests
+
+      run: npm test
